1.1.dev1
----------------

- if no pypi mirror state is known, devpi-server now calls
  pypi to obtain names/serials.  It will fail to start
  if no connection is possible.  Once a first mirror
  state is known, subsequent devpi-server starts will
  not perform this initial query.

- add --export/--import options to dump and import server contents:
  users, indexes, release files and (test) attachments.
  Note that root/pypi (PyPI-caching information) and all
  uploaded documentation will not be exported/imported in this version
  (planned for the future).

- devpi-server now returns a X-DEVPI-API-VERSION header,
  current is "1".  For future incompatible changes this
  version will be incremented so that devpi-client can
  bail out cleanly if it doesn't support the version.

- speed up and make more reliable all operations on private packages which
  have no pypi.python.org release: we can now determine if a project
  exists on pypi and under which name exactly without
  remote queries or redirects to pypi.python.org.

- also add ".serverversion" file and write it if it does not
  exist, and make devpi-server use it to verify if
  operating on a compatible server data layout, otherwise bail out.

- address issue43: --gendeploy now uses pip without --pre and
  explicitely instructs pip to install the exact same version 
  of devpi-server with which --gendeploy is issued.

- fix issue46 -- for GET /root/pypi/ only show a link to the
  simple page instead of computing "latest in-stage packages"
  which is only useful for devpi's user indices.

- fix issue37: upload with expired login causes proper 401

- fix issue45: register/upload package names are now properly 
  validated and redirects take place if e.g. a project was
  registered as "name-sub" and "+simple/name_sub" is queried.

1.0
----------------

- rename "--datadir" to "--serverdir" to better match
  the also picked up DEVPI_SERVERDIR environment variable.
